<resources>
    <string name="dashboard">Dashboard</string>
    <string name="tenantdashboard">Tenant Dashboard</string>
    <string name="address">Address:</string>
    <string name="welcome">Welcome</string>
    <string name="para">See diagrams of how useful the application for you</string>
    <string name="billpaid">Bill paid,you will redirected to the dashboard page in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="no_of_floor">No of Floor</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="buildings">Buildings</string>
    <string name="bills">Bills</string>
    <string name="tenant">Tenant</string>
    <string name="house">House</string>
    <string name="diagrams">Diagrams</string>
    <string name="owner_photo">Owner Photo</string>
    <string name="place_holder" translatable="false">Place holder</string>
    <string name="rent_amount">Rent Amount</string>
    <string name="door_no">Door No</string>
    <string name="deposit">Deposit</string>
    <string name="floor_number">Floor Number: </string>
    <string name="added_on">Added On</string>
    <string name="last_date">Last date</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="recent_bills">Recent bills</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="user_id">User ID</string>
    <string name="title_activity_owner_dashboard">OwnerDashboard</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="bill_added_on">Bill Added On</string>
    <string name="bill_no">Bill No</string>
    <string name="succesfully_paid">successfully paid.</string>
    <string name="ten_digits">Phone Number Should Have 10 digits</string>
    <string name="successfully_registered">Successfully Registered.</string>

</resources>
