<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OwnerDashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/owner_photo"
            android:src="@drawable/owner" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/owner_details" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="100dp"
                android:paddingTop="5dp"
                android:text="@string/welcome"
                android:textColor="#ffffff"
                android:textSize="@dimen/textSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/welcome"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:text="@string/username"
                android:textColor="#ffffff"
                android:textSize="@dimen/textSize"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="5dp">

            <android.support.v7.widget.CardView
                android:id="@+id/building_card"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:cardElevation="10dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardPreventCornerOverlap="false"
                card_view:cardUseCompatPadding="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/building" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:gravity="center_horizontal"
                    android:text="@string/buildings"
                    android:textColor="@color/textColor"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/bill_card"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:cardElevation="10dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardPreventCornerOverlap="false"
                card_view:cardUseCompatPadding="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/bills" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:gravity="center"
                    android:text="@string/bills"
                    android:textColor="@color/textColor"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="5dp">

            <android.support.v7.widget.CardView
                android:id="@+id/tenant_card"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:cardElevation="10dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardPreventCornerOverlap="false"
                card_view:cardUseCompatPadding="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/place_holder"
                    android:src="@drawable/tenant" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:gravity="center"
                    android:text="@string/tenant"
                    android:textColor="@color/textColor"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/house_card"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:cardElevation="10dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardPreventCornerOverlap="false"
                card_view:cardUseCompatPadding="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/house" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:gravity="center"
                    android:text="@string/house"
                    android:textColor="@color/textColor"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="5dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:padding="35dp"
                app:cardElevation="10dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardPreventCornerOverlap="false"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/graph"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/diagrams"
                        android:src="@drawable/diagramsgraph" />

                    <TextView
                        android:id="@+id/diagram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/graph"
                        android:padding="5dp"
                        android:text="@string/diagrams"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/diagram"
                        android:layout_toRightOf="@+id/graph"
                        android:padding="5dp"
                        android:text="@string/para"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/graph"
                        android:contentDescription="@string/diagrams"
                        android:padding="5dp"
                        android:src="@drawable/diagrams_part" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>


    </LinearLayout>
</ScrollView>