<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="15dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="4dp"
                android:src="@drawable/house" />


            <TextView
                android:id="@+id/txtBillsAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@id/imageView"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/bill_amount"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/txtBillLastDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtBillsAmount"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@id/imageView"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/last_date"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/txtAddedOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtBillLastDate"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@id/imageView"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/added_on"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>